# shoggoth-mini

./: .gitignore  ASSEMBLY.md  ASSEMBLY_中文.md  LICENSE  MANUAL_CONTROL_README.md  MUJOCO_LOG.TXT  README.md  README_中文.md  auto_demo_control.py  console_control.py  debug_manual_control.py  demo_training_modes.py  entropy_coefficient_demo.py  gym_interface_demo.py  list_trained_models.py  load_and_test_model.py  manual_tentacle_control.py  menu_control.py  mouse_control.py  mujoco_modeling_demo.py  mujoco_visual_demo.py  ppo_environment_interaction_demo.py  ppo_internal_mechanism.py  pyproject.toml  reward_mechanism_demo.py  rl_visual_demo.py  shoggoth_3d_print_order.txt  simple_manual_control.py  simple_step_demo.py  step_return_analysis.py  test_mujoco.py  test_rl_env.py  training_with_visual.py  video_recording_demo.py
assets/hardware/calibration/: camera-1_intrinsic_params.pickle  camera-2_intrinsic_params.pickle  stereo_params.pickle  tentacle_calibration.json
assets/hardware/printing/: dome.step  plate.step  roller.step  roller_cover.step  thick_spirobs.3mf
assets/hardware/printing/模型文件/: dome.step  spike.step  打印要求.txt
shoggoth_mini/: __main__.py
shoggoth_mini/common/: __init__.py  constants.py  logging.py
shoggoth_mini/configs/: __init__.py  base.py  control.py  default_control.yaml  default_hardware.yaml  default_orchestrator.yaml  default_perception.yaml  default_rl_training.yaml  default_vision_training.yaml  hardware.py  loaders.py  orchestrator.py  perception.py  rl_training.py  vision_training.py
shoggoth_mini/control/: closed_loop.py  geometry.py  idle.py  primitives.py
shoggoth_mini/hardware/: calibration.py  motor_calibration.py  motors.py  trackpad_control.py
shoggoth_mini/notebooks/: 3d_triangulation.ipynb
shoggoth_mini/orchestrator/: __init__.py  orchestrator.py
shoggoth_mini/perception/: dashboard.py  debug_perception.py  detection.py  hand_tracking.py  stereo.py
shoggoth_mini/training/rl/: environment.py  evaluation.py  generate_mujoco_xml.py  training.py
shoggoth_mini/training/vision/: augmentation.py  extract_frames.py  generate_synthetic_data.py  record_data.py  training.py
